Fix update images on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -286,7 +286,6 @@ p.article-subtitle {
 .img-circle {
     border-radius: 50%;
     width: 75px;
-    height: 75px;
 }
 
 .img-banner-container {
